# chatter-clan

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: book.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  parity-status.md  release-notes.md
book/src/appendices/: clan-manual-audit.md  dependent-tier-semantics.md  flag-mapping.md  glossary.md  improvements.md  parity-roadmap.md  status-matrix.md  transform-taxonomy.md
book/src/architecture/: framework.md  philosophy.md
book/src/commands/: chains.md  chat2elan.md  chat2praat.md  chat2srt.md  chat2text.md  chat2vtt.md  check.md  chip.md  chstring.md  codes.md  combo.md  combtier.md  complexity.md  compound.md  cooccur.md  corelex.md  dataclean.md  dates.md  delim.md  dist.md  dss.md  elan2chat.md  eval-d.md  eval.md  fixbullets.md  fixit.md  flo.md  flucalc.md  freq.md  freqpos.md  gem.md  gemfreq.md  gemlist.md  indent.md  ipsyn.md  keymap.md  kideval.md  kwal.md  lab2chat.md  lena2chat.md  (+40 more)
book/src/developer/: adding-command.md  architecture-seams.md  coding-standards.md  golden-tests.md  parity-field-guide.md  testing.md
book/src/divergences/: check-vs-validate.md  framework.md  not-ported.md  parity-plan.md  per-command.md  philosophy.md
book/src/getting-started/: flag-translation.md  installation.md  migration.md  quick-start.md
book/src/user-guide/: directories.md  filtering-gems.md  filtering-range.md  filtering-speakers.md  filtering-tiers.md  filtering-words.md  filtering.md  output-formats.md  pipelines.md  running-commands.md
crates/chatter-clan-cli/: Cargo.toml  build.rs
crates/chatter-clan-cli/src/: main.rs
crates/chatter-clan-cli/src/cli/: clan_common.rs  mod.rs
crates/chatter-clan-cli/src/cli/clan_commands/: help_grouping.rs  mod.rs  shared_args.rs  tests.rs
crates/chatter-clan-cli/src/commands/: mod.rs
crates/chatter-clan-cli/src/commands/clan/: analysis.rs  compatibility.rs  converters.rs  mod.rs  transforms.rs
crates/chatter-clan-cli/src/commands/clan/helpers/: arg_conversions.rs  banner.rs  filter.rs  io.rs  mod.rs  service.rs  tests.rs
crates/talkbank-clan/: CLAUDE.md  Cargo.toml  README.md
crates/talkbank-clan/scripts/: parity-check.sh
crates/talkbank-clan/src/: lib.rs  service.rs
crates/talkbank-clan/src/clan_args/: mod.rs  rewriter.rs  tests.rs
crates/talkbank-clan/src/commands/: megrasp.rs  mor.rs  post.rs  postlist.rs  postmodrules.rs  posttrain.rs
crates/talkbank-clan/src/converters/: chat2elan.rs  elan2chat.rs  lena2chat.rs  play2chat.rs  praat2chat.rs
crates/talkbank-clan/src/database/: comparison.rs  entry.rs  filter.rs  mod.rs  parser.rs
crates/talkbank-clan/src/framework/: chat_ast.rs  diversity.rs  domain_types.rs  id_filter.rs  input.rs  mod.rs  mor.rs  multiword.rs  normalized_word.rs  output.rs  runner.rs  spreadsheet.rs  stats.rs  word_filter.rs
crates/talkbank-clan/src/service_types/: builder.rs  command_name.rs  mod.rs  options.rs  request.rs  tests.rs
crates/talkbank-clan/src/transforms/: dataclean.rs  fixbullets.rs  fixit.rs  flo.rs  gem.rs  indent.rs  lines.rs  longtier.rs  lowcase.rs  retrace.rs  roles.rs  tierorder.rs
crates/talkbank-clan/tests/: clan_golden.rs  converter_golden.rs  database_integration.rs  id_filter_integration.rs  transform_golden.rs
crates/talkbank-clan/tests/clan_golden/: book_audit.rs  golden_parity.rs  harness.rs  legacy_audit.rs  metric.rs
crates/talkbank-clan/tests/common/: mod.rs
crates/talkbank-clan/tests/fixtures/: freq-include.cut
crates/talkbank-clan/tests/golden/: clan-oracle-ref.txt
(+169 files in other folders)
